# VivePro2-Linux-Driver

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  discover_resolution.cpp  discover_resolution.h  driver.cpp  driver.h  flake.nix  lens_server.h  openvr_driver.h
.cargo/: config.toml
.github/: FUNDING.yml
crates/: .gitignore
crates/lens-client/: Cargo.toml
crates/lens-client/src/: lib.rs
crates/lens-protocol/: Cargo.toml
crates/lens-protocol/src/: lib.rs
crates/openvr/: Cargo.toml
crates/openvr/src/: a.hpp  a.jsonnet  gen_mod_rs.sh  lib.rs  mod_rs.jsonnet
crates/valve-pm/: Cargo.toml
crates/valve-pm/src/: lib.rs
crates/vive-hid/: Cargo.toml
crates/vive-hid/src/: lib.rs
dist-proxy/: .gitignore  driver_lighthouse_real.sew  install.sh
kernel-patches/: .config  .dockerignore  .gitignore  0001-drm-edid-Add-Vive-Cosmos-Vive-Pro-2-to-non-desktop-l.patch  0001-drm-edid-non-desktop.patch  0002-drm-edid-parse-DRM-VESA-dsc-bpp-target.patch  0002-drm-edid-type-7-timings.patch  0003-drm-amd-use-fixed-dsc-bits-per-pixel-from-edid.patch  0003-drm-edid-dsc-bpp-parse.patch  0004-drm-amd-dsc-bpp-apply.patch  Dockerfile.archlinux-kernel  Dockerfile.debian-kernel  PKGBUILD  build-archlinux.sh  build-debian.sh
kernel-patches/dsc/: 0001-edid-parse-DRM-VESA-dsc-bpp-target.patch  0002-drm-amd-use-fixed-dsc-bits-per-pixel-from-edid.patch
lensServer/: Cargo.toml  flake.nix
lensServer/asset/: config.json
lensServer/src/: main.rs
nix/: oldGlibc.nix
src/: driver_context.rs  driver_host.rs  factory.rs  hmd.rs  lib.rs  server_tracked_provider.rs  settings.rs
src/openvr/: .gitignore  gen_mod_rs.sh  mod.rs  mod_rs.jsonnet
vivectl/: Cargo.toml  flake.nix
vivectl/src/: main.rs
