[package]
name = "driver_lighthouse"
version = "0.1.0"
edition = "2021"

[dependencies]
cppvtbl = "0.2.0"
libloading = "0.7.3"
once_cell = "1.9.0"
process_path = "0.1.3"
thiserror = "1.0.30"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"

vive-hid = { path = "./crates/vive-hid" }
lens-client = { path = "./crates/lens-client" }
lens-protocol = { path = "./crates/lens-protocol" }
real_c_string = "1.0.0"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["crates/*", "bin/*"]
