[package]
name = "vivectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.13", features = ["derive"] }
hex-literal = "0.3.4"
hidapi = "1.3.2"
thiserror = "1.0.30"
