[package]
name = "valve-pm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.1"
uuid = "1.5.0"

ctrlc = "3.4.1"
once_cell = "1.18.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tokio = { version = "1.34.0", features = ["macros"] }
futures-util = "0.3.29"

[dev-dependencies]
tracing-subscriber = "0.3.17"
