[package]
name = "vive-hid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = { version = "1.3.3", default-features = false, features = [
	"linux-static-hidraw",
] }
once_cell = "1.9.0"
thiserror = "1.0.30"
flate2 = "1.0.22"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
