[package]
name = "vive-hid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = { version = "2.4.1", default-features = false, features = [
	"linux-static-hidraw",
] }
once_cell = "1.18.0"
thiserror = "1.0.50"
flate2 = "1.0.28"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
